@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>406</width>
-    <height>332</height>
+    <width>585</width>
+    <height>466</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -97,8 +97,7 @@
         <item row="3" column="1">
          <widget class="DirRequester" name="dir"/>
         </item>
-
-        <item row="4" column="0">
+        <item row="5" column="0">
          <widget class="BuddyLabel" name="dynamicHostLabel">
           <property name="text">
            <string>Dynamizer host:</string>
@@ -108,10 +107,10 @@
           </property>
          </widget>
         </item>
-        <item row="4" column="1">
+        <item row="5" column="1">
          <widget class="LineEdit" name="dynamicHost"/>
         </item>
-        <item row="5" column="0">
+        <item row="6" column="0">
          <widget class="BuddyLabel" name="dynamicPortLabel">
           <property name="text">
            <string>Dynamizer port:</string>
@@ -121,7 +120,7 @@
           </property>
          </widget>
         </item>
-        <item row="5" column="1">
+        <item row="6" column="1">
          <widget class="SpinBox" name="dynamicPort">
           <property name="minimum">
            <number>1</number>
@@ -133,6 +132,19 @@
            <number>6600</number>
           </property>
          </widget>
+        </item>
+        <item row="4" column="0">
+         <widget class="BuddyLabel" name="coverNameLabel">
+          <property name="text">
+           <string>Cover filename:</string>
+          </property>
+          <property name="buddy">
+           <cstring>coverName</cstring>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="1">
+         <widget class="LineEdit" name="coverName"/>
         </item>
        </layout>
       </item>
@@ -192,7 +204,7 @@
    <item>
     <widget class="QLabel" name="musicFolderNoteLabel">
      <property name="text">
-      <string>&lt;i&gt;&lt;b&gt;NOTE:&lt;/b&gt; The 'Music folder' settings is used to lookup cover-art (&lt;code&gt;cover.jpg&lt;/code&gt;). If you also have write permissions to this folder (and it's sub-folders), then Cantata will save any downloaded covers into the respective album folder.&lt;/i&gt;</string>
+      <string>&lt;i&gt;&lt;b&gt;NOTE:&lt;/b&gt; The 'Music folder' setting is used to lookup cover-art (either the value specified above, or &lt;code&gt;cover.jpg&lt;/code&gt; if not set). If you also have write permissions to this folder (and it's sub-folders), then Cantata will save any downloaded covers into the respective album folder.&lt;/i&gt;</string>
      </property>
      <property name="wordWrap">
       <bool>true</bool>
@@ -243,7 +255,9 @@
    </item>
    <item>
     <widget class="QLabel" name="dynamizerNoteLabel">
-     <property name="text" />
+     <property name="text">
+      <string/>
+     </property>
      <property name="wordWrap">
       <bool>true</bool>
      </property>
@@ -287,6 +301,19 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
+ <tabstops>
+  <tabstop>host</tabstop>
+  <tabstop>port</tabstop>
+  <tabstop>password</tabstop>
+  <tabstop>dir</tabstop>
+  <tabstop>coverName</tabstop>
+  <tabstop>dynamicHost</tabstop>
+  <tabstop>dynamicPort</tabstop>
+  <tabstop>connectButton</tabstop>
+  <tabstop>saveButton</tabstop>
+  <tabstop>removeButton</tabstop>
+  <tabstop>combo</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
